# wc-signal-monitor

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml
docs/superpowers/plans/: 2026-06-19-wc-signal-monitor.md
src/wcprob/: cli.py  collector.py  config.py  consensus.py  models.py  odds.py  storage.py  tui.py
src/wcprob/sources/: __init__.py  base.py  news.py  odds_api.py  prediction_market.py
tests/: test_cli.py  test_collector.py  test_config.py  test_consensus.py  test_import.py  test_models.py  test_odds.py  test_sources.py  test_storage.py  test_tui_formatting.py
