[project]
name = "wc-signal-monitor"
version = "0.1.0"
description = "Automated World Cup 2026 signal monitor with a terminal UI"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "rich>=13.7",
  "textual>=0.70",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "respx>=0.21",
  "ruff>=0.5",
]

[project.scripts]
wcprob = "wcprob.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
